--- a/barretina_Server/pom.xml
+++ b/barretina_Server/pom.xml
@@ -20,6 +20,17 @@
             <artifactId>json</artifactId>
             <version>20240303</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/org.java-websocket/Java-WebSocket -->
+        <dependency>
+            <groupId>org.java-websocket</groupId>
+            <artifactId>Java-WebSocket</artifactId>
+            <version>1.5.3</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.jline/jline-reader -->
+        <dependency>
+            <groupId>org.jline</groupId>
+            <artifactId>jline-reader</artifactId>
+            <version>3.14.1</version>
+        </dependency>
     </dependencies>
 </project>
