--- a/barretina_Client/pom.xml
+++ b/barretina_Client/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.project</groupId>
-    <artifactId>barretina_Server</artifactId>
+    <artifactId>barretina_Client</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
