--- a/barretina_Server/proxmox/config.env
+++ b/barretina_Server/proxmox/config.env
@@ -1,3 +1,3 @@
 DEFAULT_USER="barretina4"
-DEFAULT_RSA_PATH="/home/super/.ssh/id_rsa"
+DEFAULT_RSA_PATH="C:\Users\Oscar\.ssh\id_rsa"
 DEFAULT_PORT="8080"
