--- a/barretina_Server/pom.xml
+++ b/barretina_Server/pom.xml
@@ -38,6 +38,12 @@
             <artifactId>jline-reader</artifactId>
             <version>3.14.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
